<resources>
    <string name="app_name">FlexiTask</string>

    <string-array name="recurring_options_array">
        <item>Never</item>
        <item>Every Day</item>
        <item>Every Week</item>
        <item>Every Fortnight</item>
        <item>Every Year</item>
        <item>Custom</item>
    </string-array>

    <string-array name="recurring_options_array_flexiTask">
        <item>Every Day</item>
        <item>Every Week</item>
        <item>Every Fortnight</item>
        <item>Every Year</item>
        <item>Custom</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="fixed_task">Fixed Task</string>
    <string name="flexi_task">Flexi Task</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="color_preference_key">color_preference_key</string>
    <string name="color_preference_title">Colour Adjustment</string>
    <string name="light_mode">Light Mode</string>
    <string name="Dark_mode">Light Mode</string>
    
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="color_default_value">OCOLOUR</string>
    <string name="color_summary">Change the app\'s colour scheme (REQUIRES APP RESTART)</string>
    <string name="help">Help</string>
    <string name="delete_label">Delete Label</string>
    <string name="back_button">back button</string>
    <string name="task_title">task title</string>
    <string name="title">Title</string>
    <string name="task_description">task description</string>
    <string name="description">Description</string>
    <string name="reminder">Reminder</string>
    <string name="alarm">alarm</string>
    <string name="set_reminder">set reminder</string>
    <string name="date_selector">date selector</string>
    <string name="date">date</string>
    <string name="time_selector">time selector</string>
    <string name="time">time</string>
    <string name="label_selector">label selector</string>
    <string name="label">label</string>
    <string name="click_to_select_a_label_for_the_task">click to select a label for the task</string>
    <string name="recurring_period_selector">Recurring Period selector</string>
    <string name="recurring">Recurring</string>
    <string name="click_to_select_recurring_period">click to select recurring period</string>
    <string name="_0">0</string>
    <string name="days">days</string>
    <string name="title_and_description_container">title and description container</string>
    <string name="next_due_date">Next Due Date</string>
    <string name="next_due">Next Due</string>
    <string name="click_to_select_a_label_for_the_task">click to select a label for the task</string>
    <string name="every">Every</string>
    <string name="_0">0</string>
    <string name="days">days</string>
    <string name="it_s_a_bit_lonely_in_here">It\'s a bit lonely in here...</string>
    <string name="to_get_started_click_the_plus_symbol">To get started, click the plus symbol</string>
    <string name="toolbar">ToolBar</string>
    <string name="done_button">Done Button</string>
    <string name="edit_button">Edit button</string>
    <string name="delete_button">Delete Button</string>
    <string name="xmlns">xmlns</string>
    <string name="time_filters">Time Filters</string>
    <string name="anytime">Anytime</string>
    <string name="today">Today</string>
    <string name="past_week">Past Week</string>
    <string name="past_month">Past Month</string>
    <string name="past_year">Past Year</string>
    <string name="task_type_buttons">Task Type Buttons</string>
    <string name="all_tasks">All tasks</string>
    <string name="fixed_tasks">Fixed Tasks</string>
    <string name="flexitasks">FlexiTasks</string>
    <string name="title">Title</string>
    <string name="date_completed">Date Completed</string>
    <string name="message">message</string>
    <string name="due_date">due date</string>
    <string name="life_time_flexitasks_10">Life time FlexiTasks 10</string>
    <string name="life_time_fixedtasks_10">Life time FixedTasks 10</string>
    <string name="flexitask">FlexiTask</string>
    <string name="weekly_goal_0_0">Weekly goal 0/0</string>
    <string name="edit_goal">edit goal</string>
    <string name="_3_5_tasks">3/5 Tasks</string>
    <string name="completed_flexi_tasks">completed Flexi tasks</string>
    <string name="_0">0</string>
    <string name="completed_fixed_tasks">completed Fixed tasks</string>
    <string name="_0">0</string>
    <string name="_0">0</string>
    <string name="completed_tasks">completed tasks</string>
    <string name="units">units</string>
    <string name="minutes_before">Minutes before</string>
    <string name="hours_before">Hours before</string>
    <string name="days_before">Days before</string>
    <string name="weeks_before">Weeks before</string>
    <string name="action_bar">Action Bar</string>
    <string name="action_bar">Action Bar</string>
    <string name="tasksC">Tasks</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="insert">insert</string>
    <string name="dateC">Date</string>
    <string name="timeC">Time</string>
    <string name="labelC">Label</string>
    <string name="recurringC">Recurring</string>
    <string name="descriptionC">Description</string>
    <string name="titleC">Title</string>
</resources>
