<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference

        android:key="@string/color_preference_key"
        android:title="@string/color_preference_title"
        android:dialogTitle="@string/color_preference_title"
        android:summary="@string/color_summary"
        android:entries="@array/colorEntries"
        android:contentDescription="Colour Adjustment"
        android:entryValues="@array/colorValueEntries"
        android:defaultValue="@string/color_default_value"
    />



    <SwitchPreference
        android:key="daily"
        android:title="Daily notification"
        android:defaultValue="true"
        android:contentDescription="Turn off daily notifications" />


    <com.example.android.flexitask.TimePreferenceObject
        android:key="time"
        android:title="Set Daily Notification"
        android:defaultValue="8:00"
        android:contentDescription="Time Picker for notifications"
        android:summary="Select when you want to recieve a daily summary"/>

    <Preference
        android:key="contactDevKey"
        android:title="Contact developer"
        android:summary="Please report any bugs you find">
        <intent android:action="android.intent.action.VIEW"
            android:data="mailto:flexitaskapp@gmail.com">

            <extra android:name="android.intent.extra.TEXT"
                android:value="What can I help you with?" />
            <extra android:name="android.intent.extra.SUBJECT"
                android:value="Bug report for flexitask" />
        </intent>
    </Preference>
</PreferenceScreen>
